Finish the project

--- a/index.html
+++ b/index.html
@@ -8,252 +8,253 @@
 	</head>
 	<body>
 		<header class="fixed">
-			<img class="bars" src="img/bars.png">
-			<img class="logo" src="img/youtube-logo.png">
-			<input class="search" type="text" placeholder="Search"><!--
-			--><button class="search-button" type="button"><img class="search-button-pic" src="img/magnify.png"></button>
+			<a href="#"><img class="bars" src="img/bars.png"></a>
+			<a href="#"><img class="logo" src="img/youtube-logo.png"></a>
+			<input class="search" type="text" placeholder="Search">
+			<button class="search-button" type="button"><img class="search-button-pic" src="img/magnify.png"></button>
 			<nav class="nav-header">
-				<img class="icon-2" src="img/upload.png">
-				<img class="icon-1" src="img/ring.png">
-				<img class="nav-pic" src="img/shero.jpg">
+				<a href="#"><img class="icon-2" src="img/upload.png"></a>
+				<a href="#"><img class="icon-1" src="img/ring.png"></a>
+				<a href="#"><img class="nav-pic" src="img/shero.jpg"></a>
 			</nav>
 		</header>
-		<iframe src="https://www.youtube.com/embed/V74l_zS1x8E"></iframe>
+		<iframe src="https://www.youtube.com/embed/V74l_zS1x8E?autoplay=1"></iframe>
 		<aside class="recommended">
-			<p class="next">Next</p>
+			<p class="next">Up Next</p>
 			<div class="next-video">
-				<img src="img/0.jpg" alt="video">
+				<a href="#"><img src="img/0.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Contributing to Open Source Part II: The Real Way</h4>
-					<p class="channel">The Odin Project</p>
-					<p class="views">9.235 views</p>
+					<a href="#"><h4>Contributing to Open Source Part II: The Real Way</h4></a>
+					<a href="#"><p class="channel">The Odin Project</p></a>
+					<a href="#"><p class="views">9.235 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/hqdefault.jpg" alt="video">
+				<a href="#"><img src="img/hqdefault.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>'How to Get a Job at the Big 4 - Amazon, Facebook, Google &</h4>
-					<p class="channel">imtiana</p>
-					<p class="views">179.446 views</p>
+					<a href="#"><h4>'How to Get a Job at the Big 4 - Amazon, Facebook, Google &</h4></a>
+					<a href="#"><p class="channel">imtiana</p></a>
+					<a href="#"><p class="views">179.446 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/2.jpg" alt="video">
+				<a href="#"><img src="img/2.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>How to Get Started with Github Beginner Tutorial</h4>
-					<p class="channel">MicrowaveSam</p>
-					<p class="views">270.681 views</p>
+					<a href="#"><h4>How to Get Started with Github Beginner Tutorial</h4></a>
+					<a href="#"><p class="channel">MicrowaveSam</p></a>
+					<a href="#"><p class="views">270.681 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/3.jpg" alt="video">
+				<a href="#"><img src="img/3.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Beginners guide to contributing to open source software</h4>
-					<p class="channel">iiitafirefoxclub</p>
-					<p class="views">21.026 views</p>
+					<a href="#"><h4>Beginners guide to contributing to open source software</h4></a>
+					<a href="#"><p class="channel">iiitafirefoxclub</p></a>
+					<a href="#"><p class="views">21.026 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/4.jpg" alt="video">
+				<a href="#"><img src="img/4.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Write and Submit your first Linux kernel Patch</h4>
-					<p class="channel">fosdemtalks</p>
-					<p class="views">102.850 views</p>
+					<a href="#"><h4>Write and Submit your first Linux kernel Patch</h4></a>
+					<a href="#"><p class="channel">fosdemtalks</p></a>
+					<a href="#"><p class="views">102.850 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/5.jpg" alt="video">
+				<a href="#"><img src="img/5.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>How to use Github for Beginners</h4>
-					<p class="channel">Chris Lam</p>
-					<p class="views">113.534 views</p>
+					<a href="#"><h4>How to use Github for Beginners</h4></a>
+					<a href="#"><p class="channel">Chris Lam</p></a>
+					<a href="#"><p class="views">113.534 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/6.jpg" alt="video">
+				<a href="#"><img src="img/6.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Getting Started in Open Source Software</h4>
-					<p class="channel">osswatch</p>
-					<p class="views">2.237 views</p>
+					<a href="#"><h4>Getting Started in Open Source Software</h4></a>
+					<a href="#"><p class="channel">osswatch</p></a>
+					<a href="#"><p class="views">2.237 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/7.jpg" alt="video">
+				<a href="#"><img src="img/7.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Become an Open Source Developer</h4>
-					<p class="channel">HowToBecomeTV</p>
+					<a href="#"><h4>Become an Open Source Developer</h4></a>
+					<a href="#"><p class="channel">HowToBecomeTV</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/8.jpg" alt="video">
+				<a href="#"><img src="img/8.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Open Source Basics</h4>
-					<p class="channel">Intel Software</p>
-					<p class="views">30.599 views</p>
+					<a href="#"><h4>Open Source Basics</h4></a>
+					<a href="#"><p class="channel">Intel Software</p></a>
+					<a href="#"><p class="views">30.599 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/9.jpg" alt="video">
+				<a href="#"><img src="img/9.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>History of Gnu, Linux, Free and Open Source Software</h4>
-					<p class="channel">Linux4UnMe</p>
-					<p class="views">20.455 views</p>
+					<a href="#"><h4>History of Gnu, Linux, Free and Open Source Software</h4></a>
+					<a href="#"><p class="channel">Linux4UnMe</p></a>
+					<a href="#"><p class="views">20.455 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/10.jpg" alt="video">
+				<a href="#"><img src="img/10.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>How to contribute on Github</h4>
-					<p class="channel">Mazyad Alabduljalil</p>
-					<p class="views">209 views</p>
+					<a href="#"><h4>How to contribute on Github</h4></a>
+					<a href="#"><p class="channel">Mazyad Alabduljalil</p></a>
+					<a href="#"><p class="views">209 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/11.jpg" alt="video">
+				<a href="#"><img src="img/11.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>How to get involved in open source...</h4>
-					<p class="channel">SFState Commons</p>
-					<p class="views">2.354 views</p>
+					<a href="#"><h4>How to get involved in open source...</h4></a>
+					<a href="#"><p class="channel">SFState Commons</p></a>
+					<a href="#"><p class="views">2.354 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/12.jpg" alt="video">
+				<a href="#"><img src="img/12.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Webcast Drive By Contributions on Github</h4>
-					<p class="channel">GitHub Training & Guides</p>
-					<p class="views">4.219 views</p>
+					<a href="#"><h4>Webcast Drive By Contributions on Github</h4></a>
+					<a href="#"><p class="channel">GitHub Training & Guides</p></a>
+					<a href="#"><p class="views">4.219 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/13.jpg" alt="video">
+				<a href="#"><img src="img/13.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>13 free Open Source software to make your games!</h4>
-					<p class="channel">GDquest</p>
-					<p class="views">37.790 views</p>
+					<a href="#"><h4>13 free Open Source software to make your games!</h4></a>
+					<a href="#"><p class="channel">GDquest</p></a>
+					<a href="#"><p class="views">37.790 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/14.jpg" alt="video">
+				<a href="#"><img src="img/14.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>AlterConf Seattle 2015-So You Want to Contribute to Open</h4>
-					<p class="channel">Confreaks</p>
-					<p class="views">253 views</p>
+					<a href="#"><h4>AlterConf Seattle 2015-So You Want to Contribute to Open</h4></a>
+					<a href="#"><p class="channel">Confreaks</p></a>
+					<a href="#"><p class="views">253 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/15.jpg" alt="video">
+				<a href="#"><img src="img/15.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Benefits of Participating in Open Source Projects</h4>
-					<p class="channel">Dice</p>
-					<p class="views">475 views</p>
+					<a href="#"><h4>Benefits of Participating in Open Source Projects</h4></a>
+					<a href="#"><p class="channel">Dice</p></a>
+					<a href="#"><p class="views">475 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/16.jpg" alt="video">
+				<a href="#"><img src="img/16.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>dotJS2012-Fat-What Is Open Source & Why Do I Feel So</h4>
-					<p class="channel">dotconferences</p>
-					<p class="views">60.219 views</p>
+					<a href="#"><h4>dotJS2012-Fat-What Is Open Source & Why Do I Feel So</h4></a>
+					<a href="#"><p class="channel">dotconferences</p></a>
+					<a href="#"><p class="views">60.219 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/17.jpg" alt="video">
+				<a href="#"><img src="img/17.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Machine Learning: The Basics, with Ron Bekkerman</h4>
-					<p class="channel">LinkedInTechTalks</p>
-					<p class="views">100.634 views</p>
+					<a href="#"><h4>Machine Learning: The Basics, with Ron Bekkerman</h4></a>
+					<a href="#"><p class="channel">LinkedInTechTalks</p></a>
+					<a href="#"><p class="views">100.634 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/18.jpg" alt="video">
+				<a href="#"><img src="img/18.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Contributing to Open Source</h4>
-					<p class="channel">Joe Brinkman</p>
-					<p class="views">465 views</p>
+					<a href="#"><h4>Contributing to Open Source</h4></a>
+					<a href="#"><p class="channel">Joe Brinkman</p></a>
+					<a href="#"><p class="views">465 views</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<img src="img/19.jpg" alt="video">
+				<a href="#"><img src="img/19.jpg" alt="video"></a>
 				<div class="aside-info">
-					<h4>Intro to Contribute on GitHub | Free Code Camp Atlanta</h4>
-					<p class="channel">Leah Williamson</p>
-					<p class="views">165 views</p>
+					<a href="#"><h4>Intro to Contribute on GitHub | Free Code Camp Atlanta</h4></a>
+					<a href="#"><p class="channel">Leah Williamson</p></a>
+					<a href="#"><p class="views">165 views</p></a>
 				</div>
 			</div>
-			<p class="more">SHOW MORE</p>
+			<a href="#"><p class="more">SHOW MORE</p></a>
 		</aside>
 		<section class="frame">
 			<div class="video-title">
-				<h1>Contributing to Open Source Part I: The Easy Way</h2>
-				<img class="profile-pic" src="img/photo.jpg" alt="profile picture">
-				<h6>The Odin Project</h6>
+				<h1>Contributing to Open Source Part I: The Easy Way</h1>
+				<a href="#"><img class="profile-pic" src="img/photo.jpg" alt="profile picture"></a>
 				<div class="subs">
-					<img class="tick" src="img/tick.png">
-					<p>Subscribed</p>
+					<a href="#"><h6>The Odin Project</h6></a>
+					<a href="#"><img class="subsc" src="img/subsc.png"></a>
 				</div>
 				<p class="total-views">17.718 views</p>
 				<div class="options">
+					<a href="#"><img class="opt" src="img/options.png"></a>
+					<a href="#"><img class="liking" src="img/likes.png"></a>
 				</div>
 			</div>
 			<section class="video-desc">
 				<h6>Published on Feb 27, 2014</h6>
 				<p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple contribution to an open source project -- without using the command line, a text editor, "forking a repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are typically looking for. As an example, I use submitting a student solution to a web development exercise from The</p>
-				<h5>SHOW MORE</h5>
+				<a href="#"><h5>SHOW MORE</h5></a>
 			</section>
 			<section class="comments">
 				<h3>COMMENTS 4</h6>
 				<div class="self">
 					<img class="profile-pic" src="img/shero.jpg">
 					<div class="comment-form">
-						<input class="form" type="textarea">
+						<input class="form" type="textarea" placeholder="Add a public comment...">
 					</div>
 				</div>
-				<div class="favourite">Favourite comments</div>
+				<a hef="#"><div class="favourite">Top comments</div></a>
 				<div class="comment">
-					<img class="profile-pic" src="img/jakeytron.jpg" alt="profile picture">
+					<a href="#"><img class="profile-pic" src="img/jakeytron.jpg" alt="profile picture"></a>
 					<div class="comment-div">
-						<p class="name">Jakeytron <span class="small-link">3 months ago</span></p>
+						<a href="#"><p class="name">Jakeytron <span class="small-link">3 months ago</span></p></a>
 						<p>Wow this video was super helpful, clear, and concise. Thank you very much.﻿</p>
 						<div class="likes">
-							<p class="respond">Respond</p>
-							<img class="like" src="img/like.png">
-							<img class="like" src="img/dislike.png">
+							<a href="#"><p class="respond">Respond</p></a>
+							<a href="#"><img class="like" src="img/like.png"></a>
+							<a href="#"><img class="like" src="img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<img class="profile-pic" src="img/sampath.jpg" alt="profile picture">
+					<a href="#"><img class="profile-pic" src="img/sampath.jpg" alt="profile picture"></a>
 					<div class="comment-div">
-						<p class="name">Sampath Lokuge <span class="small-link">6 months ago</span></p>
+						<a href="#"><p class="name">Sampath Lokuge <span class="small-link">6 months ago</span></p></a>
 						<p>Nice.Thanks a lot:)</p>
 						<div class="likes">
-							<p class="respond">Respond</p>
-							<img class="like" src="img/like.png">
-							<img class="like" src="img/dislike.png">
+							<a href="#"><p class="respond">Respond</p></a>
+							<a href="#"><img class="like" src="img/like.png"></a>
+							<a href="#"><img class="like" src="img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<img class="profile-pic" src="img/andew.jpg" alt="profile picture">
+					<a href="#"><img class="profile-pic" src="img/andew.jpg" alt="profile picture"></a>
 					<div class="comment-div">
-						<p class="name">andrewscheuermann05 <span class="small-link">2 years ago</span></p>
+						<a href="#"><p class="name">andrewscheuermann05 <span class="small-link">2 years ago</span></p></a>
 						<p>FYI:the edit button has changed to a diagonal pencil﻿</p>
 						<div class="likes">
-							<p class="respond">Respond</p>
-							<img class="like" src="img/like.png">
-							<img class="like" src="img/dislike.png">
+							<a href="#"><p class="respond">Respond</p></a>
+							<a href="#"><img class="like" src="img/like.png"></a>
+							<a href="#"><img class="like" src="img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<img class="profile-pic" src="img/richard.jpg" alt="profile picture">
+					<a href="#"><img class="profile-pic" src="img/richard.jpg" alt="profile picture"></a>
 					<div class="comment-div">
-						<p class="name">Richard Dickinson <span class="small-link">1 year ago</span></p>
+						<a href="#"><p class="name">Richard Dickinson <span class="small-link">1 year ago</span></p></a>
 						<p>I am working through the Odin Project which is good but it took me ages to figure out how to submit my solution to the HTML/CSS project.I posted in all places (on the Odin website, on Google+ and others) and I finally got a reply (thanks hgducherne). However I'm still waiting for the repo admin to accept my pull request, so this has been a slow, tedious process as my first introduction to contributing on GitHub. Shame I didn't see this video earlier and I hope my pull request is dealt with soon.....﻿</p>
 						<div class="likes">
-							<p class="respond">Respond</p>
-							<img class="like" src="img/like.png">
-							<img class="like" src="img/dislike.png">
+							<a href="#"><p class="respond">Respond</p></a>
+							<a href="#"><img class="like" src="img/like.png"></a>
+							<a href="#"><img class="like" src="img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
@@ -261,13 +262,34 @@
 		</section>
 		<footer>
 			<div class="footer-up">
-				<img class="footer-logo" src="img/youtube-logo.png">
+				<a href="#"><img class="footer-logo" src="img/youtube-logo.png"></a>
 				<nav class="nav-footer">
+					<a href="#"><img src="img/language.png"></a>
+					<a href="#"><img src="img/country.png"></a>
+					<a href="#"><img src="img/restricted.png"></a>
+					<a href="#"><img src="img/history.png"></a>
+					<a href="#"><img src="img/help.png"></a>
 				</nav>
 			</div>
 			<nav class="nav-com">
+				<ul>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">About</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">Press</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">Copyright</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">Creators</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">Advertise</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">Developers</a></li>
+					<li class="nav-com-list"><a class="nav-com-link" href="#">+YouTube</a></li>
+				</ul>
 			</nav>
 			<nav class="nav-small">
+				<ul>
+					<li class="nav-small-list"><a class="nav-small-link" href="#">Terms</a></li>
+					<li class="nav-small-list"><a class="nav-small-link" href="#">Privacy</a></li>
+					<li class="nav-small-list"><a class="nav-small-link" href="#">Policy & Safety</a></li>
+					<li class="nav-small-list"><a class="nav-small-link" href="#">Send feedback</a></li>
+					<li class="nav-small-list"><a class="nav-small-link" href="#">Try something new!</a></li>
+				</ul>
 			</nav>
 		</footer>
 	</body>
