Put everything in their folders

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 	<head>
 		<title>Contributing to Open Source Part I: The Easy Way-YouTube</title>
-		<link rel="shortcut icon" type="image/png" href="img/youtube-favicon.png">
-		<link href="reset.css" rel="stylesheet">
-		<link href="main.css" rel="stylesheet">
+		<link rel="shortcut icon" type="image/png" href="assets/img/youtube-favicon.png">
+		<link href="assets/stylesheets/reset.css" rel="stylesheet">
+		<link href="assets/stylesheets/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="fixed">
-			<a href="#"><img class="bars" src="img/bars.png"></a>
-			<a href="#"><img class="logo" src="img/youtube-logo.png"></a>
+			<a href="#"><img class="bars" src="assets/img/bars.png"></a>
+			<a href="#"><img class="logo" src="assets/img/youtube-logo.png"></a>
 			<input class="search" type="text" placeholder="Search">
-			<button class="search-button" type="button"><img class="search-button-pic" src="img/magnify.png"></button>
+			<button class="search-button" type="button"><img class="search-button-pic" src="assets/img/magnify.png"></button>
 			<nav class="nav-header">
-				<a href="#"><img class="icon-2" src="img/upload.png"></a>
-				<a href="#"><img class="icon-1" src="img/ring.png"></a>
-				<a href="#"><img class="nav-pic" src="img/shero.jpg"></a>
+				<a href="#"><img class="icon-2" src="assets/img/upload.png"></a>
+				<a href="#"><img class="icon-1" src="assets/img/ring.png"></a>
+				<a href="#"><img class="nav-pic" src="assets/img/shero.jpg"></a>
 			</nav>
 		</header>
 		<iframe src="https://www.youtube.com/embed/V74l_zS1x8E?autoplay=1"></iframe>
 		<aside class="recommended">
 			<p class="next">Up Next</p>
 			<div class="next-video">
-				<a href="#"><img src="img/0.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/0.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Contributing to Open Source Part II: The Real Way</h4></a>
 					<a href="#"><p class="channel">The Odin Project</p></a>
@@ -30,7 +30,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/hqdefault.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/hqdefault.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>'How to Get a Job at the Big 4 - Amazon, Facebook, Google &</h4></a>
 					<a href="#"><p class="channel">imtiana</p></a>
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/2.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/2.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>How to Get Started with Github Beginner Tutorial</h4></a>
 					<a href="#"><p class="channel">MicrowaveSam</p></a>
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/3.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/3.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Beginners guide to contributing to open source software</h4></a>
 					<a href="#"><p class="channel">iiitafirefoxclub</p></a>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/4.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/4.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Write and Submit your first Linux kernel Patch</h4></a>
 					<a href="#"><p class="channel">fosdemtalks</p></a>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/5.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/5.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>How to use Github for Beginners</h4></a>
 					<a href="#"><p class="channel">Chris Lam</p></a>
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/6.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/6.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Getting Started in Open Source Software</h4></a>
 					<a href="#"><p class="channel">osswatch</p></a>
@@ -78,14 +78,14 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/7.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/7.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Become an Open Source Developer</h4></a>
 					<a href="#"><p class="channel">HowToBecomeTV</p></a>
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/8.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/8.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Open Source Basics</h4></a>
 					<a href="#"><p class="channel">Intel Software</p></a>
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/9.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/9.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>History of Gnu, Linux, Free and Open Source Software</h4></a>
 					<a href="#"><p class="channel">Linux4UnMe</p></a>
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/10.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/10.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>How to contribute on Github</h4></a>
 					<a href="#"><p class="channel">Mazyad Alabduljalil</p></a>
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/11.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/11.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>How to get involved in open source...</h4></a>
 					<a href="#"><p class="channel">SFState Commons</p></a>
@@ -117,7 +117,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/12.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/12.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Webcast Drive By Contributions on Github</h4></a>
 					<a href="#"><p class="channel">GitHub Training & Guides</p></a>
@@ -125,7 +125,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/13.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/13.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>13 free Open Source software to make your games!</h4></a>
 					<a href="#"><p class="channel">GDquest</p></a>
@@ -133,7 +133,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/14.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/14.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>AlterConf Seattle 2015-So You Want to Contribute to Open</h4></a>
 					<a href="#"><p class="channel">Confreaks</p></a>
@@ -141,7 +141,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/15.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/15.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Benefits of Participating in Open Source Projects</h4></a>
 					<a href="#"><p class="channel">Dice</p></a>
@@ -149,7 +149,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/16.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/16.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>dotJS2012-Fat-What Is Open Source & Why Do I Feel So</h4></a>
 					<a href="#"><p class="channel">dotconferences</p></a>
@@ -157,7 +157,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/17.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/17.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Machine Learning: The Basics, with Ron Bekkerman</h4></a>
 					<a href="#"><p class="channel">LinkedInTechTalks</p></a>
@@ -165,7 +165,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/18.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/18.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Contributing to Open Source</h4></a>
 					<a href="#"><p class="channel">Joe Brinkman</p></a>
@@ -173,7 +173,7 @@
 				</div>
 			</div>
 			<div class="recommended-video">
-				<a href="#"><img src="img/19.jpg" alt="video"></a>
+				<a href="#"><img src="assets/img/19.jpg" alt="video"></a>
 				<div class="aside-info">
 					<a href="#"><h4>Intro to Contribute on GitHub | Free Code Camp Atlanta</h4></a>
 					<a href="#"><p class="channel">Leah Williamson</p></a>
@@ -185,15 +185,15 @@
 		<section class="frame">
 			<div class="video-title">
 				<h1>Contributing to Open Source Part I: The Easy Way</h1>
-				<a href="#"><img class="profile-pic" src="img/photo.jpg" alt="profile picture"></a>
+				<a href="#"><img class="profile-pic" src="assets/img/photo.jpg" alt="profile picture"></a>
 				<div class="subs">
 					<a href="#"><h6>The Odin Project</h6></a>
-					<a href="#"><img class="subsc" src="img/subsc.png"></a>
+					<a href="#"><img class="subsc" src="assets/img/subsc.png"></a>
 				</div>
 				<p class="total-views">17.718 views</p>
 				<div class="options">
-					<a href="#"><img class="opt" src="img/options.png"></a>
-					<a href="#"><img class="liking" src="img/likes.png"></a>
+					<a href="#"><img class="opt" src="assets/img/options.png"></a>
+					<a href="#"><img class="liking" src="assets/img/likes.png"></a>
 				</div>
 			</div>
 			<section class="video-desc">
@@ -204,57 +204,57 @@
 			<section class="comments">
 				<h3>COMMENTS 4</h6>
 				<div class="self">
-					<img class="profile-pic" src="img/shero.jpg">
+					<img class="profile-pic" src="assets/img/shero.jpg">
 					<div class="comment-form">
 						<input class="form" type="textarea" placeholder="Add a public comment...">
 					</div>
 				</div>
 				<a hef="#"><div class="favourite">Top comments</div></a>
 				<div class="comment">
-					<a href="#"><img class="profile-pic" src="img/jakeytron.jpg" alt="profile picture"></a>
+					<a href="#"><img class="profile-pic" src="assets/img/jakeytron.jpg" alt="profile picture"></a>
 					<div class="comment-div">
 						<a href="#"><p class="name">Jakeytron <span class="small-link">3 months ago</span></p></a>
 						<p>Wow this video was super helpful, clear, and concise. Thank you very much.﻿</p>
 						<div class="likes">
 							<a href="#"><p class="respond">Respond</p></a>
-							<a href="#"><img class="like" src="img/like.png"></a>
-							<a href="#"><img class="like" src="img/dislike.png"></a>
+							<a href="#"><img class="like" src="assets/img/like.png"></a>
+							<a href="#"><img class="like" src="assets/img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<a href="#"><img class="profile-pic" src="img/sampath.jpg" alt="profile picture"></a>
+					<a href="#"><img class="profile-pic" src="assets/img/sampath.jpg" alt="profile picture"></a>
 					<div class="comment-div">
 						<a href="#"><p class="name">Sampath Lokuge <span class="small-link">6 months ago</span></p></a>
 						<p>Nice.Thanks a lot:)</p>
 						<div class="likes">
 							<a href="#"><p class="respond">Respond</p></a>
-							<a href="#"><img class="like" src="img/like.png"></a>
-							<a href="#"><img class="like" src="img/dislike.png"></a>
+							<a href="#"><img class="like" src="assets/img/like.png"></a>
+							<a href="#"><img class="like" src="assets/img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<a href="#"><img class="profile-pic" src="img/andew.jpg" alt="profile picture"></a>
+					<a href="#"><img class="profile-pic" src="assets/img/andew.jpg" alt="profile picture"></a>
 					<div class="comment-div">
 						<a href="#"><p class="name">andrewscheuermann05 <span class="small-link">2 years ago</span></p></a>
 						<p>FYI:the edit button has changed to a diagonal pencil﻿</p>
 						<div class="likes">
 							<a href="#"><p class="respond">Respond</p></a>
-							<a href="#"><img class="like" src="img/like.png"></a>
-							<a href="#"><img class="like" src="img/dislike.png"></a>
+							<a href="#"><img class="like" src="assets/img/like.png"></a>
+							<a href="#"><img class="like" src="assets/img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
 				<div class="comment">
-					<a href="#"><img class="profile-pic" src="img/richard.jpg" alt="profile picture"></a>
+					<a href="#"><img class="profile-pic" src="assets/img/richard.jpg" alt="profile picture"></a>
 					<div class="comment-div">
 						<a href="#"><p class="name">Richard Dickinson <span class="small-link">1 year ago</span></p></a>
 						<p>I am working through the Odin Project which is good but it took me ages to figure out how to submit my solution to the HTML/CSS project.I posted in all places (on the Odin website, on Google+ and others) and I finally got a reply (thanks hgducherne). However I'm still waiting for the repo admin to accept my pull request, so this has been a slow, tedious process as my first introduction to contributing on GitHub. Shame I didn't see this video earlier and I hope my pull request is dealt with soon.....﻿</p>
 						<div class="likes">
 							<a href="#"><p class="respond">Respond</p></a>
-							<a href="#"><img class="like" src="img/like.png"></a>
-							<a href="#"><img class="like" src="img/dislike.png"></a>
+							<a href="#"><img class="like" src="assets/img/like.png"></a>
+							<a href="#"><img class="like" src="assets/img/dislike.png"></a>
 						</div>
 					</div>
 				</div>
@@ -262,13 +262,13 @@
 		</section>
 		<footer>
 			<div class="footer-up">
-				<a href="#"><img class="footer-logo" src="img/youtube-logo.png"></a>
+				<a href="#"><img class="footer-logo" src="assets/img/youtube-logo.png"></a>
 				<nav class="nav-footer">
-					<a href="#"><img src="img/language.png"></a>
-					<a href="#"><img src="img/country.png"></a>
-					<a href="#"><img src="img/restricted.png"></a>
-					<a href="#"><img src="img/history.png"></a>
-					<a href="#"><img src="img/help.png"></a>
+					<a href="#"><img src="assets/img/language.png"></a>
+					<a href="#"><img src="assets/img/country.png"></a>
+					<a href="#"><img src="assets/img/restricted.png"></a>
+					<a href="#"><img src="assets/img/history.png"></a>
+					<a href="#"><img src="assets/img/help.png"></a>
 				</nav>
 			</div>
 			<nav class="nav-com">
